# TFELMathEnzyme

./: CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
.github/workflows/: check.yml
docs/web/: index.md
include/: CMakeLists.txt
include/TFEL/Math/Enzyme/: GetPartialDerivative.hxx  GetPartialDerivative.ixx  Variable.hxx  Variable.ixx  autodiff.hxx  autodiff.ixx  computeDerivative.hxx  computeDerivative.ixx  computeForwardModeDerivative.hxx  computeForwardModeDerivative.ixx  computeForwardModeGradient.hxx  computeForwardModeGradient.ixx  computeReverseModeDerivative.hxx  computeReverseModeDerivative.ixx  computeReverseModeGradient.hxx  computeReverseModeGradient.ixx  diff.hxx  diff.ixx  diff2.hxx  fwddiff.hxx  fwddiff.ixx  getDerivative.hxx  getDerivative.ixx  getDerivativeFunction.hxx  getDerivativeFunction.ixx  getForwardModeDerivativeFunction.hxx  getForwardModeDerivativeFunction.ixx  getForwardModeGradientFunction.hxx  getForwardModeGradientFunction.ixx  getGradientFunction.hxx  getGradientFunction.ixx  getReverseModeDerivativeFunction.hxx  getReverseModeDerivativeFunction.ixx  getReverseModeGradientFunction.hxx  getReverseModeGradientFunction.ixx
include/TFEL/Math/Enzyme/Internals/: CallEnzymeFwdDiff.hxx  CallEnzymeFwdDiff.ixx  Enzyme.hxx  FunctionUtilities.hxx  IsTemporary.hxx  TypeList.hxx
src/: CMakeLists.txt
test-suite/test1/: Makefile  test.cxx
test-suite/test2/: Makefile  test.cxx
test-suite/test3/: Makefile  test.cxx  tfel-math-enzyme-3.xml
tests/: CMakeLists.txt  computeDerivative.cxx  computeGradient.cxx  computeReverseModeDerivative.cxx  computeReverseModeGradient.cxx  fwddiff.cxx  getDerivative.cxx  getDerivativeFunction.cxx  getForwardModeDerivativeFunction.cxx  getForwardModeGradientFunction.cxx  getGradientFunction.cxx
